--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@supabase/supabase-js": "^2.51.0",
     "@types/axios": "^0.9.36",
     "axios": "^1.10.0",
     "downshift": "^9.0.9",
