--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "downshift": "^9.0.9",
     "next": "15.3.4",
+    "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.1"
@@ -21,6 +22,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
